<resources>
    <string name="app_name">Credito Para Todes</string>
    <string name="tv_title_intro">Empréstimo pessoal online</string>
    <string name="tv_intro">Também conhecido como “crédito pessoal”, é uma opção geralmente oferecida por bancos, fintechs e financeiras. A escolha mais indicada para diferentes necessidades, como:</string>
    <string name="tv_pagamento_dividas"> Pagamento de dívidas;</string>
    <string name="compras_de_alto_valor">Compras de alto valor;</string>
    <string name="investimentos">Investimentos;</string>
    <string name="viagens">Viagens;</string>
    <string name="e_muito_mais">E muito mais</string>
    <string name="tv_title_opcoes">Conheça as nossas modalidades de empréstimo pessoal!</string>
    <string name="automovel">Empréstimo com garantia de automóvel</string>
    <string name="imovel">Empréstimo com garantia de imóvel</string>
    <string name="sem_renda">Empréstimo sem comprovação de renda</string>
    <string name="automovel_item_1">Use seu automóvel como garantia do seu empréstimo;</string>
    <string name="automovel_item_2">Transforme até 80% do valor do seu imóvel em crédito para seu empréstimo;</string>
    <string name="automovel_item_3">Com essa garantia, você consegue maiores prazos de pagamento e as menores taxas de juros do mercado;</string>
    <string name="contratar">Contratar</string>
    <string name="imovel_item_1">Use sua casa, apartamento, terrenos ou imóveis comerciais como garantia do seu empréstimo;</string>
    <string name="imovel_item_2">Transforme até 60% do valor do seu imóvel em crédito para seu empréstimo;</string>
    <string name="imovel_item_3">Os parceiros do Crédito para todxs oferecem limites e serviços variados para cada perfil de
        consumidor,inclusive com opções sem anuidade.
    </string>
    <string name="sem_renda_item_1">Pesquisar e comparar opções de crédito ajudam a encontrar taxas de juros menores.
                A promessa de empréstimo sem comprovação de renda pode parecer tentadora para quem possui
                alguma restrição no nome. Mas nem sempre o fato de não precisar comprovar renda é uma alternativa
                interessante por causa dos juros. Para escolher a melhor opção de crédito para o seu bolso,
                você precisa pesquisar e comparar as ofertas do mercado.</string>
    <string name="tv_title_cadastro">Cadastre-se abaixo:</string>
    <string name="nome">Nome: </string>
    <string name="escreva_seu_nome">Escreva seu nome</string>
    <string name="renda_mensal">Renda mensal:</string>
    <string name="escreva_sua_renda_mensal">Sua renda mensal aqui</string>
    <string name="tipo_emprestimo">Empréstimo escolhido</string>
    <string name="garantia_de_automovel">Garantia de Automóvel</string>
    <string name="garantia_de_imovel">Garantia de Imóvel</string>
    <string name="sem_comprovacao_de_renda">Sem renda</string>
    <string name="tv_valor_emprestimo">Valor desejado</string>
    <string name="enviar_para_analise">Enviar para análise</string>
    <string name="email">Email: </string>
    <string name="escreva_seu_melhor_email">Escreva seu melhor email</string>
    <string name="cadastro_efetuado_com_sucesso">o seu cadastro foi efetuado com sucesso. Sua solicitação está em análise. Você receberá uma mensagem de confirmação no email.</string>
    <string name="nome_cadastrado">Nome,</string>
    <string name="escreva_o_valor_desejado">Escreva o valor desejado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_button">Entrar</string>

</resources>